--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,58 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: rgba(20,20,20,1.00);
+  color: rgba(211,211,211,1.00)
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+#spread-box-mobile {
+  display: none;
+}
+
+footer {
+  padding: 10px 25px;
+  text-align: center;
+  display: flex;
+  justify-items: center;
+}
+
+#toggle-feed-btn {
+background-color: blueviolet;
+color: white;
+padding: 25px;
+}
+
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+  body {
+    background-color: black;
+    font-size: 12px;
+    color: chartreuse;
+    font-family: monospace;
+  }
+
+  #spread-box-desktop {
+    display: none;
+  }
+
+  #spread-box-mobile {
+    display:block;
+  }
+
+  button {
+    text-align: center;
+  }
+
+  
+}
+
