--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,30 @@ color: white;
 padding: 25px;
 }
 
+.orderbox-container{
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  }
+  .orderbox-column {
+      margin-right: 10px;
+  }
+  
+  .order-price {
+      
+  }
+  
+  .order-size {
+      color: white;
+  }
+  
+  .order-total {
+     color: white;
+  }
+  
+  
+    
+
 
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
