--- a/src/index.css
+++ b/src/index.css
@@ -31,10 +31,15 @@ color: white;
 padding: 25px;
 }
 
-.orderbox-container{
+#orderbook {
   display: flex;
   flex-direction: row;
-  align-items: flex-start;
+  align-items: center;
+  justify-content: center;
+}
+
+.orderbox-container{
+
   }
   .orderbox-column {
       margin-right: 10px;
