--- a/src/features/orderbook/orderBox/OrderBox.module.css
+++ b/src/features/orderbook/orderBox/OrderBox.module.css
@@ -2,13 +2,13 @@
     padding-left: 2.5em;
     padding-right: 2.5em;
 }
- 
+
 .orderSize {
     color: white;
     padding-left: 2.5em;
     padding-right: 2.5em
 }
- 
+
 .orderTotal {
     color: white;
     padding-left: 2.5em;
@@ -24,7 +24,7 @@
     word-break: break-word;
     overflow: hidden;
     text-overflow: ellipsis;
-    min-width: 0px;
+    min-width: 0;
     white-space: nowrap;
     justify-content: flex-end;
 }
